# SoundTouch_OpenSL_Android

./: README.md
SoundTouchDemo/app/: CMakeLists.txt  build.gradle
SoundTouchDemo/app/src/androidTest/java/ywl5320/com/soundtouchdemo/: ExampleInstrumentedTest.java
SoundTouchDemo/app/src/main/: AndroidManifest.xml
SoundTouchDemo/app/src/main/cpp/: native-lib.cpp
SoundTouchDemo/app/src/main/cpp/include/: STTypes.h
SoundTouchDemo/app/src/main/java/ywl5320/com/soundtouchdemo/: MainActivity.java  SoundTouch.java
SoundTouchDemo/app/src/main/res/layout/: activity_main.xml
SoundTouchDemo/app/src/main/res/values/: strings.xml
SoundTouchDemo/app/src/test/java/ywl5320/com/soundtouchdemo/: ExampleUnitTest.java
